--- a/Size_LT/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Size_LT/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -162,6 +162,7 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettin
 
 [DetailCustomWidgetExpansion]
 WorldSettings=WorldSettings.WorldPartitionSetup.RuntimeHash
+WorldPartitionRuntimeSpatialHash=
 
 [ContentBrowser]
 ContentBrowserTab1.SelectedPaths=/Game/StarterContent/HDRI
@@ -184,6 +185,25 @@ ContentBrowserTab1.SelectedCollections=
 ContentBrowserTab1.ExpandedCollections=
 ContentBrowserTab1.ThumbnailSize=2
 ContentBrowserTab1.CurrentViewType=1
+ContentBrowserDrawer.SourcesExpanded=True
+ContentBrowserDrawer.FavoritesAreaExpanded=False
+ContentBrowserDrawer.PathAreaExpanded=True
+ContentBrowserDrawer.CollectionAreaExpanded=False
+ContentBrowserDrawer.FavoritesSearchAreaExpanded=False
+ContentBrowserDrawer.PathSearchAreaExpanded=False
+ContentBrowserDrawer.CollectionSearchAreaExpanded=False
+ContentBrowserDrawer.VerticalSplitter.SlotSize0=0.150000006
+ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
+ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
+ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
+ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
+ContentBrowserDrawer.SelectedPaths=/Game/Characters/Mannequin_UE4
+ContentBrowserDrawer.PluginFilters=
+ContentBrowserDrawer.Favorites.SelectedPaths=
+ContentBrowserDrawer.SelectedCollections=
+ContentBrowserDrawer.ExpandedCollections=
+ContentBrowserDrawer.ThumbnailSize=2
+ContentBrowserDrawer.CurrentViewType=1
 
 [EditorStartup]
 LastLevel=/Game/ThirdPerson/Maps/ThirdPersonMap
@@ -313,6 +333,12 @@ TakeRecorderWorldSourceSettings="\"Object\" "
 TcpMessagingSettings="\"Object\" "
 UdpMessagingSettings="\"Object\" "
 WmfMediaSettings="\"Object\" "
+SkeletalMeshComponent="\"Object\" "
+SkinnedMeshComponent="\"Object\" "
+MeshComponent="\"Object\" "
+PrimitiveComponent="\"Object\" "
+SceneComponent="\"Object\" "
+ActorComponent="\"Object\" "
 
 [DetailCategories]
 WorldSettings.PrecomputedVisibility=True
@@ -333,10 +359,72 @@ WorldSettings.Nanite=True
 WorldSettings.Audio=True
 WorldSettings.Tick=True
 WorldSettings.Networking=True
+BP_ThirdPersonCharacter_C.TransformCommon=True
+BP_ThirdPersonCharacter_C.Animation=True
+BP_ThirdPersonCharacter_C.Mesh=True
+BP_ThirdPersonCharacter_C.Tick=True
+BP_ThirdPersonCharacter_C.Input=True
+BP_ThirdPersonCharacter_C.Camera=True
+BP_ThirdPersonCharacter_C.ComponentTick=True
+BP_ThirdPersonCharacter_C.Physics=True
+BP_ThirdPersonCharacter_C.Collision=True
+BP_ThirdPersonCharacter_C.Clothing=True
+BP_ThirdPersonCharacter_C.Lighting=True
+BP_ThirdPersonCharacter_C.LeaderPoseComponent=True
+BP_ThirdPersonCharacter_C.AnimationRig=True
+BP_ThirdPersonCharacter_C.Deformer=True
+BP_ThirdPersonCharacter_C.SkinWeights=True
+BP_ThirdPersonCharacter_C.Rendering=True
+BP_ThirdPersonCharacter_C.HLOD=True
+BP_ThirdPersonCharacter_C.PathTracing=True
+BP_ThirdPersonCharacter_C.Mobile=True
+BP_ThirdPersonCharacter_C.Navigation=True
+BP_ThirdPersonCharacter_C.RayTracing=True
+BP_ThirdPersonCharacter_C.VirtualTexture=True
+BP_ThirdPersonCharacter_C.Tags=True
+BP_ThirdPersonCharacter_C.AssetUserData=True
+BP_ThirdPersonCharacter_C.Replication=True
+BP_ThirdPersonCharacter_C.ComponentReplication=True
+BP_ThirdPersonCharacter_C.Activation=True
+BP_ThirdPersonCharacter_C.Variable=True
+BP_ThirdPersonCharacter_C.Cooking=True
+BP_ThirdPersonCharacter_C.Character Movement (General Settings)=True
+BP_ThirdPersonCharacter_C.Character Movement: Walking=True
+BP_ThirdPersonCharacter_C.Character Movement: Jumping / Falling=True
+BP_ThirdPersonCharacter_C.Character Movement: Gravity=True
+BP_ThirdPersonCharacter_C.Character Movement (Networking)=True
+BP_ThirdPersonCharacter_C.Character Movement: Swimming=True
+BP_ThirdPersonCharacter_C.Character Movement: Flying=True
+BP_ThirdPersonCharacter_C.Character Movement: Custom Movement=True
+BP_ThirdPersonCharacter_C.Character Movement (Rotation Settings)=True
+BP_ThirdPersonCharacter_C.Character Movement: Physics Interaction=True
+BP_ThirdPersonCharacter_C.Character Movement=True
+BP_ThirdPersonCharacter_C.Character Movement: Avoidance=True
+BP_ThirdPersonCharacter_C.RootMotion=True
+BP_ThirdPersonCharacter_C.Character Movement: NavMesh Movement=True
+BP_ThirdPersonCharacter_C.NavMovement=True
+BP_ThirdPersonCharacter_C.Velocity=True
+BP_ThirdPersonCharacter_C.PlanarMovement=True
+BP_ThirdPersonCharacter_C.MovementComponent=True
+BP_ThirdPersonCharacter_C.Shape=True
+BP_ThirdPersonCharacter_C.Character=True
+BP_ThirdPersonCharacter_C.Pawn=True
+BP_ThirdPersonCharacter_C.Actor=True
+BP_ThirdPersonCharacter_C.WorldPartition=True
+BP_ThirdPersonCharacter_C.Events=True
+BP_ThirdPersonCharacter_C.Materials=True
+BP_ThirdPersonGameMode_C.Tick=True
+BP_ThirdPersonGameMode_C.Classes=True
+BP_ThirdPersonGameMode_C.Game=True
+BP_ThirdPersonGameMode_C.GameMode=True
+BP_ThirdPersonGameMode_C.Physics=True
+BP_ThirdPersonGameMode_C.Events=True
 
 [AssetEditorSubsystem]
 CleanShutdown=True
 DebuggerAttached=False
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
 bHideEditorDataLayers=False
@@ -353,7 +441,7 @@ PerWorldEditorSettings=(("/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap",
 
 [RootWindow]
 ScreenPosition=X=320.000 Y=149.600
-WindowSize=X=1281.600 Y=721.600
+WindowSize=X=1283.200 Y=723.200
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -1444,4 +1532,62 @@ MovieSceneCapture.LastCompileMethod=Unknown
 [Python]
 LastDirectory=
 RecentsFiles=C:/Program Files/Epic Games/UE_5.3/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
+
+[AssetEditorSubsystemRecents]
+MRUItem0=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
+MRUItem1=/Game/ThirdPerson/Blueprints/BP_ThirdPersonGameMode
+
+[AssetEditorToolkitTabLocation]
+/Game/ThirdPerson/Blueprints/BP_ThirdPersonGameMode.BP_ThirdPersonGameMode=1
+/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter.BP_ThirdPersonCharacter=1
+
+[/Script/BlueprintGraph.BlueprintEditorSettings]
+bDrawMidpointArrowsInBlueprints=False
+bShowGraphInstructionText=True
+bHideUnrelatedNodes=False
+bShowShortTooltips=True
+bEnableInputTriggerSupportWarnings=False
+bSplitContextTargetSettings=True
+bExposeAllMemberComponentFunctions=True
+bShowContextualFavorites=False
+bExposeDeprecatedFunctions=False
+bCompactCallOnMemberNodes=False
+bFlattenFavoritesMenus=True
+bAutoCastObjectConnections=False
+bShowViewportOnSimulate=False
+bSpawnDefaultBlueprintNodes=True
+bHideConstructionScriptComponentsInDetailsView=True
+bHostFindInBlueprintsInGlobalTab=True
+bNavigateToNativeFunctionsFromCallNodes=True
+bDoubleClickNavigatesToParent=True
+bEnableTypePromotion=True
+TypePromotionPinDenyList=("string","text")
+BreakpointReloadMethod=RestoreAll
+bEnablePinValueInspectionTooltips=True
+bEnableNamespaceEditorFeatures=True
+bEnableContextMenuTimeSlicing=True
+ContextMenuTimeSlicingThresholdMs=50
+bIncludeActionsForSelectedAssetsInContextMenu=False
+bLimitAssetActionBindingToSingleSelectionOnly=False
+bLoadSelectedAssetsForContextMenuActionBinding=True
+bDoNotMarkAllInstancesDirtyOnDefaultValueChange=True
+bFavorPureCastNodes=False
+SaveOnCompile=SoC_Never
+bJumpToNodeErrors=False
+bAllowExplicitImpureNodeDisabling=False
+bShowActionMenuItemSignatures=False
+bBlueprintNodeUniqueNames=False
+bShowDetailedCompileResults=False
+CompileEventDisplayThresholdMs=5
+NodeTemplateCacheCapMB=20.000000
+bShowInheritedVariables=False
+bAlwaysShowInterfacesInOverrides=True
+bShowParentClassInOverrides=True
+bShowEmptySections=True
+bShowAccessSpecifier=False
+Bookmarks=()
+PerBlueprintSettings=()
+bIncludeCommentNodesInBookmarksTab=True
+bShowBookmarksForCurrentDocumentOnlyInTab=False
+GraphEditorQuickJumps=()
 
