Updated health bar widget

--- a/LaunchTitle_Group_I/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/LaunchTitle_Group_I/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -172,8 +172,8 @@ GridEnabled=False
 RotGridEnabled=False
 
 [MRU]
-MRUItem0=/Game/ScottStuff/MainMenu
-MRUItem1=/Game/ScottStuff/ScottLevel1
+MRUItem0=/Game/ScottStuff/ScottLevel1
+MRUItem1=/Game/ScottStuff/MainMenu
 MRUItem2=/Game/ThirdPerson/KeelanLevel2
 MRUItem3=/Game/ThirdPerson/Keelan_Room_NEW
 MRUItem4=/Game/ScottStuff/KeelanLevel1
@@ -515,12 +515,12 @@ ContentBrowserDrawer.ThumbnailSize=2
 ContentBrowserDrawer.CurrentViewType=1
 
 [EditorStartup]
-LastLevel=/Game/ScottStuff/MainMenu
+LastLevel=/Game/ScottStuff/ScottLevel1
 
 [DetailPropertyExpansion]
 WorldPartitionRuntimeSpatialHash="\"Object\" "
 WorldPartitionRuntimeHash="\"Object\" "
-Object="\"Object\" \"Object.Style.WidgetStyle\" \"Object.Style.WidgetStyle.BackgroundImage\" \"Object.Style.WidgetStyle.FillImage\" \"Object.Appearance.FillColorAndOpacity\" \"Object.Layout.Slot\" "
+Object="\"Object\" \"Object.Layout.Slot\" "
 SceneComponent="\"Object\" \"Object.Collision.BodyInstance\" \"Object.Tags.ComponentTags\" "
 ActorComponent="\"Object\" \"Object.Collision.BodyInstance\" \"Object.Tags.ComponentTags\" "
 StaticMeshComponent="\"Object\" \"Object.Tags.ComponentTags\" "
@@ -568,8 +568,8 @@ Character=
 Pawn=
 CanvasPanel="\"Object\" \"Object.Layout.Slot\" "
 PanelWidget="\"Object\" \"Object.Layout.Slot\" "
-Widget="\"Object\" \"Object.Style.WidgetStyle\" \"Object.Style.WidgetStyle.BackgroundImage\" \"Object.Style.WidgetStyle.FillImage\" \"Object.Appearance.FillColorAndOpacity\" \"Object.Layout.Slot\" "
-Visual="\"Object\" \"Object.Style.WidgetStyle\" \"Object.Style.WidgetStyle.BackgroundImage\" \"Object.Style.WidgetStyle.FillImage\" \"Object.Appearance.FillColorAndOpacity\" \"Object.Layout.Slot\" "
+Widget="\"Object\" \"Object.Layout.Slot\" "
+Visual="\"Object\" \"Object.Layout.Slot\" "
 TextBlock="\"Object\" \"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Appearance.StrikeBrush\" \"Object.Layout.Slot\" "
 TextLayoutWidget="\"Object\" \"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Appearance.StrikeBrush\" \"Object.Layout.Slot\" "
 Time_WG_C="\"Object\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" "
@@ -746,7 +746,7 @@ ContentWidget="\"Object\" \"Object.Appearance.ColorAndOpacity\" \"Object.Appeara
 Code_For_Door_UI_C="\"Object\" "
 Moveable_Object_BP_C="\"Object\" "
 Border="\"Object\" \"Object.Content.ContentColorAndOpacity\" \"Object.Layout.Slot\" "
-Image="\"Object\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" "
+Image="\"Object\" \"Object.Appearance.Brush\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" "
 Death_Screen_WG_C="\"Object\" "
 CubeGridToolActions="\"Object\" "
 CubeGridToolProperties="\"Object\" "
@@ -835,19 +835,19 @@ LightComponentBase="\"Object\" \"Object.Tags.ComponentTags\" "
 Lift_Platform_BP_C="\"Object\" \"Object.Default.MoveToPosition\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Lighting.LightmassSettings\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Lighting.LightingChannels\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance\" "
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
 DebuggerAttached=False
 None=======
 None=======
 None=======
 None=======
-RecentAssetEditors=WidgetBlueprintEditor
-RecentAssetEditors=WidgetBlueprintEditor
-RecentAssetEditors=WidgetBlueprintEditor
-RecentAssetEditors=WidgetBlueprintEditor
-RecentAssetEditors=
-RecentAssetEditors=
 RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=
+RecentAssetEditors=
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=LevelSequenceEditor
@@ -871,11 +871,7 @@ RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=
 RecentAssetEditors=
-OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/Buttons_And_Doors/Interactable_Door_Controlled_By_Interactble_Door_Button.Interactable_Door_Controlled_By_Interactble_Door_Button
-OpenAssetsAtExit=/Game/ScottStuff/UI/MainMenu/FinishedMenu/FinishedMainMenu.FinishedMainMenu
 OpenAssetsAtExit=/Game/ThirdPerson/Widgets/Main_HUD_WG.Main_HUD_WG
-OpenAssetsAtExit=/Game/ScottStuff/UI/LevelSelectFolder/LEVEL_SELECT.LEVEL_SELECT
-OpenAssetsAtExit=/Game/ThirdPerson/Widgets/Time_WG.Time_WG
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=FourPanes2x2
@@ -891,13 +887,13 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/ThirdPerson/Widgets/Time_WG
+MRUItem0=/Game/ScottStuff/ScottLevel1
 MRUItem1=/Game/ThirdPerson/Widgets/Main_HUD_WG
-MRUItem2=/Game/ScottStuff/UI/LevelSelectFolder/LEVEL_SELECT
-MRUItem3=/Game/ScottStuff/UI/MainMenu/FinishedMenu/LEVELsELECT/LEVEL_SELECT
-MRUItem4=/Game/ScottStuff/UI/MainMenu/FinishedMenu/FinishedMainMenu
-MRUItem5=/Game/ScottStuff/MainMenu
-MRUItem6=/Game/ScottStuff/ScottLevel1
+MRUItem2=/Game/ThirdPerson/Widgets/Time_WG
+MRUItem3=/Game/ScottStuff/UI/LevelSelectFolder/LEVEL_SELECT
+MRUItem4=/Game/ScottStuff/UI/MainMenu/FinishedMenu/LEVELsELECT/LEVEL_SELECT
+MRUItem5=/Game/ScottStuff/UI/MainMenu/FinishedMenu/FinishedMainMenu
+MRUItem6=/Game/ScottStuff/MainMenu
 MRUItem7=/Game/ThirdPerson/Blueprints/Buttons_And_Doors/Interactable_Door_Controlled_By_Interactble_Door_Button
 MRUItem8=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
 MRUItem9=/Game/ThirdPerson/Blueprints/Buttons_And_Doors/Door_Trigger_Box_BP
@@ -3141,6 +3137,13 @@ Interactable_Door_Controlled_By_Interactble_Door_Button_C.Favorites=True
 Interactable_Door_Button_For_Door_C.Favorites=True
 CameraComponent.Favorites=True
 StaticMeshComponent.Favorites=True
+Widget.Behavior=True
+Widget.Accessibility=True
+Widget.Render Transform=True
+Widget.Performance=True
+Widget.Rendering=True
+Widget.Navigation=True
+Widget.Localization=True
 
 [PlacementMode]
 RecentlyPlaced=/Game/ScottStuff/PropModels/large_hamster_Wheel_001.large_hamster_Wheel_001;
@@ -3375,7 +3378,7 @@ ScreenPosition=X=124.000 Y=0.000
 WindowSize=X=1343.200 Y=783.200
 WindowSize=X=1370.000 Y=810.000
 WindowSize=X=1371.200 Y=811.200
-WindowSize=X=1382.400 Y=811.200
+WindowSize=X=1384.000 Y=811.200
 None=======
 None=======
 None=======
