more hud changes
changed text

--- a/LaunchTitle_Group_I/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/LaunchTitle_Group_I/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -124,7 +124,7 @@ ServerDebugDrawingColorTint=(R=0.000000,G=0.000000,B=0.000000,A=1.000000)
 AdditionalServerLaunchParameters=
 ServerFixedFPS=0
 NetworkEmulationSettings=(bIsNetworkEmulationEnabled=False,EmulationTarget=Server,CurrentProfile="Custom",OutPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0),InPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0))
-LastSize=(X=0,Y=0)
+LastSize=(X=1914,Y=980)
 LastExecutedLaunchDevice=Windows@GAMESDESIGN01
 LastExecutedLaunchName=GAMESDESIGN01
 LastExecutedPIEPreviewDevice=
@@ -535,7 +535,7 @@ LastLevel=/Game/ScottStuff/ScottLevel1
 [DetailPropertyExpansion]
 WorldPartitionRuntimeSpatialHash="\"Object\" "
 WorldPartitionRuntimeHash="\"Object\" "
-Object="\"Object\" "
+Object="\"Object\" \"Object.Layout.Slot\" "
 SceneComponent="\"Object\" "
 ActorComponent="\"Object\" "
 StaticMeshComponent="\"Object\" \"Object.Tags.ComponentTags\" "
@@ -587,9 +587,9 @@ CanvasPanel="\"Object\" \"Object.Layout.Slot\" "
 PanelWidget="\"Object\" \"Object.Layout.Slot\" "
 PanelWidget="\"Object\" \"Object.Layout.Slot\" "
 Widget="\"Object\" \"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Appearance.StrikeBrush\" \"Object.Layout.Slot\" "
-Widget="\"Object\" \"Object.Appearance.Brush\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" "
+Widget="\"Object\" \"Object.Layout.Slot\" "
 Visual="\"Object\" \"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Appearance.StrikeBrush\" \"Object.Layout.Slot\" "
-Visual="\"Object\" \"Object.Appearance.Brush\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" "
+Visual="\"Object\" \"Object.Layout.Slot\" "
 TextBlock="\"Object\" \"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Appearance.StrikeBrush\" \"Object.Layout.Slot\" "
 TextBlock="\"Object\" \"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Appearance.StrikeBrush\" \"Object.Layout.Slot\" "
 TextLayoutWidget="\"Object\" \"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Appearance.StrikeBrush\" \"Object.Layout.Slot\" "
@@ -877,6 +877,7 @@ None=======
 None=======
 None=======
 RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=
 RecentAssetEditors=Niagara
 RecentAssetEditors=BlueprintEditor
@@ -893,7 +894,6 @@ RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=
 RecentAssetEditors=
-RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=
 RecentAssetEditors=
 RecentAssetEditors=
@@ -907,6 +907,7 @@ RecentAssetEditors=
 RecentAssetEditors=
 RecentAssetEditors=
 OpenAssetsAtExit=/Game/ThirdPerson/Widgets/Main_HUD_WG.Main_HUD_WG
+OpenAssetsAtExit=/Game/ThirdPerson/Widgets/Code_For_Door_UI.Code_For_Door_UI
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=FourPanes2x2
@@ -922,8 +923,8 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/ThirdPerson/Widgets/Main_HUD_WG
-MRUItem1=/Game/ThirdPerson/Widgets/Code_For_Door_UI
+MRUItem0=/Game/ThirdPerson/Widgets/Code_For_Door_UI
+MRUItem1=/Game/ThirdPerson/Widgets/Main_HUD_WG
 MRUItem2=/Game/ScottStuff/ScottLevel1
 MRUItem3=/Game/ScottStuff/VFX/ShrinkNiagra
 MRUItem4=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
